--- a/pom.xml
+++ b/pom.xml
@@ -28,28 +28,6 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>myfaces-demo</name>
-  <description>A custom project using MyFaces 2.0</description>
-  <url>http://www.myorganization.org</url>
-
-  <!-- Instructions
-    - Run using jetty
-        mvn clean jetty:run
-        mvn clean -Dcontainer=jetty-mojarra jetty:run
-        Set your browser to http://localhost:8080/myfaces-demo
-    - Run using tomcat
-        mvn clean -Dcontainer=tomcat7 tomcat:run
-        Set your browser to http://localhost:8080/myfaces-demo
-    - Run war using tomcat
-        mvn clean -Dcontainer=tomcat7 tomcat:run-war
-        Set your browser to http://localhost:8080/myfaces-demo
-    - Run war using jetty (remove <webApp> config inside plugin config first)
-        mvn clean jetty:run-war
-        mvn clean -Dcontainer=jetty-mojarra jetty:run-war
-        Set your browser to http://localhost:8080
-    - Build war and bundle JSF jars
-        mvn clean -Pbundle-myfaces install
-        mvn clean -Pbundle-mojarra install
-   -->
 
   <properties>
     <jsf-myfaces.version>2.3.7</jsf-myfaces.version>
@@ -71,29 +49,8 @@
     </plugins>
   </build>
 
-  <!-- Project dependencies -->
   <dependencies>
 
-    <!-- <dependency>
-         <groupId>org.apache.geronimo.specs</groupId>
-         <artifactId>geronimo-servlet_2.5_spec</artifactId>
-         <version>1.2</version>
-         <scope>provided</scope>
-     </dependency>
-
-     <dependency>
-         <groupId>org.apache.geronimo.specs</groupId>
-         <artifactId>geronimo-el_2.2_spec</artifactId>
-         <version>1.0.2</version>
-         <scope>provided</scope>
-     </dependency>
-
-     <dependency>
-         <groupId>org.apache.geronimo.specs</groupId>
-         <artifactId>geronimo-annotation_1.0_spec</artifactId>
-         <version>1.1.1</version>
-         <scope>provided</scope>
-     </dependency>-->
 
     <!-- JSF API: Add here as provided dependency and then add it
          on jetty-maven-plugin as compile/runtime dependency.
@@ -257,7 +214,7 @@
         <plugins>
           <plugin>
             <!--This plugin allows to run the war using mvn jetty:run -->
-            <groupId>org.mortbay.jetty</groupId>
+            <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
             <version>${jetty.maven.plugin.version}</version>
             <configuration>
@@ -271,7 +228,6 @@
               <webApp>
                 <contextPath>/${artifactId}</contextPath>
               </webApp>
-              <scanIntervalSeconds>5</scanIntervalSeconds>
             </configuration>
             <dependencies>
               <!-- Tld scanning only works when JSF is included
@@ -314,7 +270,7 @@
           <plugin>
             <groupId>org.apache.tomcat.maven</groupId>
             <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.0-beta-1</version>
+            <version>2.2</version>
           </plugin>
         </plugins>
       </build>
