--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,8 @@
   <name>myfaces-demo</name>
 
   <properties>
-    <jsf-myfaces.version>2.3.7</jsf-myfaces.version>
-    <jsf-mojarra.version>2.1.7</jsf-mojarra.version>
-    <jetty.maven.plugin.version>10.0.0</jetty.maven.plugin.version>
+    <myfaces.version>2.3.7</myfaces.version>
+    <jetty.version>10.0.0</jetty.version>
   </properties>
 
   <build>
@@ -50,107 +49,40 @@
   </build>
 
   <dependencies>
-
-
-    <!-- JSF API: Add here as provided dependency and then add it
-         on jetty-maven-plugin as compile/runtime dependency.
-         The same goes for other JSF libraries. -->
     <dependency>
       <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-api</artifactId>
-      <version>${jsf-myfaces.version}</version>
-      <!--            <scope>provided</scope>-->
+      <version>${myfaces.version}</version>
+      <scope>provided</scope>
     </dependency>
-
-    <!--<dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>jstl</artifactId>
-        <version>1.2</version>
-        <scope>runtime</scope>
-    </dependency>
-
     <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.8.2</version>
-        <scope>test</scope>
-    </dependency>-->
-
+      <groupId>org.apache.myfaces.core</groupId>
+      <artifactId>myfaces-impl</artifactId>
+      <version>${myfaces.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
     <profile>
-      <id>bundle-myfaces</id>
-      <activation>
-        <property>
-          <name>jsf</name>
-          <value>myfaces</value>
-        </property>
-      </activation>
-      <!-- Include MyFaces jars into the war -->
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.myfaces.core</groupId>
-          <artifactId>myfaces-api</artifactId>
-          <version>${jsf-myfaces.version}</version>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.myfaces.core</groupId>
-          <artifactId>myfaces-impl</artifactId>
-          <version>${jsf-myfaces.version}</version>
-          <scope>runtime</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <!-- Plugin embedded jetty 8 container.
-           Just running use:
-           mvn clean jetty:run
-      -->
-      <!-- For debugging use (attach debugger port 8000):
-           mvnDebug clean jetty:run
-      -->
-      <id>jettyConfig</id>
-      <activation>
-        <property>
-          <name>!container</name>
-        </property>
-      </activation>
+      <id>jetty</id>
       <build>
         <plugins>
           <plugin>
-            <!--This plugin allows to run the war using mvn jetty:run -->
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
-            <version>${jetty.maven.plugin.version}</version>
-            <configuration>
-              <systemProperties>
-                <systemProperty>
-                  <!-- optional to use the ecj compiler -->
-                  <name>org.apache.jasper.compiler.disablejsr199</name>
-                  <value>true</value>
-                </systemProperty>
-              </systemProperties>
-              <webApp>
-                <contextPath>/${artifactId}</contextPath>
-              </webApp>
-            </configuration>
+            <version>${jetty.version}</version>
             <dependencies>
-              <!-- Tld scanning only works when JSF is included
-                   as container dependency. Add other jsf libraries
-                   here, so jetty:run goal can find and process them -->
               <dependency>
                 <groupId>org.apache.myfaces.core</groupId>
                 <artifactId>myfaces-api</artifactId>
-                <version>${jsf-myfaces.version}</version>
+                <version>${myfaces.version}</version>
                 <scope>compile</scope>
               </dependency>
               <dependency>
                 <groupId>org.apache.myfaces.core</groupId>
                 <artifactId>myfaces-impl</artifactId>
-                <version>${jsf-myfaces.version}</version>
+                <version>${myfaces.version}</version>
                 <scope>runtime</scope>
               </dependency>
               <dependency> <!-- add JAXB to run the demo with Java 11 and higher -->
@@ -163,133 +95,5 @@
         </plugins>
       </build>
     </profile>
-
-    <profile>
-      <id>bundle-mojarra</id>
-      <activation>
-        <property>
-          <name>jsf</name>
-          <value>mojarra</value>
-        </property>
-      </activation>
-      <!-- Include Mojarra jars into the war -->
-      <dependencies>
-        <dependency>
-          <groupId>com.sun.faces</groupId>
-          <artifactId>jsf-api</artifactId>
-          <version>${jsf-mojarra.version}</version>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>com.sun.faces</groupId>
-          <artifactId>jsf-impl</artifactId>
-          <version>${jsf-mojarra.version}</version>
-          <scope>runtime</scope>
-        </dependency>
-      </dependencies>
-      <repositories>
-        <repository>
-          <id>java.net</id>
-          <url>http://download.java.net/maven/2</url>
-        </repository>
-      </repositories>
-    </profile>
-
-    <profile>
-      <!-- Plugin embedded jetty 8 container.
-           Just running use:
-           mvn clean -Dcontainer=jetty-mojarra jetty:run
-      -->
-      <!-- For debugging use (attach debugger port 8000):
-           mvn clean -Dcontainer=jetty-mojarra jetty:run
-      -->
-      <id>jettyConfig-mojarra</id>
-      <activation>
-        <property>
-          <name>container</name>
-          <value>jetty-mojarra</value>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <!--This plugin allows to run the war using mvn jetty:run -->
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-maven-plugin</artifactId>
-            <version>${jetty.maven.plugin.version}</version>
-            <configuration>
-              <systemProperties>
-                <systemProperty>
-                  <!-- optional to use the ecj compiler -->
-                  <name>org.apache.jasper.compiler.disablejsr199</name>
-                  <value>true</value>
-                </systemProperty>
-              </systemProperties>
-              <webApp>
-                <contextPath>/${artifactId}</contextPath>
-              </webApp>
-            </configuration>
-            <dependencies>
-              <!-- Tld scanning only works when JSF is included
-                   as container dependency. Add other jsf libraries
-                   here, so jetty:run goal can find and process them -->
-              <dependency>
-                <groupId>com.sun.faces</groupId>
-                <artifactId>jsf-api</artifactId>
-                <version>${jsf-mojarra.version}</version>
-                <scope>compile</scope>
-              </dependency>
-              <dependency>
-                <groupId>com.sun.faces</groupId>
-                <artifactId>jsf-impl</artifactId>
-                <version>${jsf-mojarra.version}</version>
-                <scope>runtime</scope>
-              </dependency>
-            </dependencies>
-          </plugin>
-        </plugins>
-      </build>
-      <repositories>
-        <repository>
-          <id>java.net</id>
-          <url>http://download.java.net/maven/2</url>
-        </repository>
-      </repositories>
-    </profile>
-
-    <profile>
-      <id>maven-tomcat7</id>
-      <activation>
-        <property>
-          <name>container</name>
-          <value>tomcat7</value>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.2</version>
-          </plugin>
-        </plugins>
-      </build>
-      <dependencies>
-        <dependency>
-          <groupId>org.apache.myfaces.core</groupId>
-          <artifactId>myfaces-api</artifactId>
-          <version>${jsf-myfaces.version}</version>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.myfaces.core</groupId>
-          <artifactId>myfaces-impl</artifactId>
-          <version>${jsf-myfaces.version}</version>
-          <scope>runtime</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
   </profiles>
-
 </project>
